<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.matheus.lima.trabalhofinalpospuc.presentation.viewmodels.ReportsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.home.NewReportsFragment">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_solicitation"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:textColor="@color/outer_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@={viewModel.reportForm.title}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_report_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/text_description_of_problem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_report_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@={viewModel.reportForm.description}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_report_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/text_cpf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_report_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@={viewModel.reportForm.cpf}"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_report_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/text_location_of_problem"
            android:enabled="false"
            app:layout_constraintEnd_toStartOf="@+id/btn_select_report_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_report_cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@={viewModel.reportForm.location}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_report_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select"
            android:textAllCaps="false"
            android:textColor="@color/brunswick_green"
            app:cornerRadius="50dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/brunswick_green"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/til_report_location"
            app:layout_constraintEnd_toEndOf="@+id/til_report_cpf"
            app:layout_constraintTop_toTopOf="@+id/til_report_location" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_photos"
            app:layout_constraintStart_toStartOf="@+id/til_report_location"
            app:layout_constraintTop_toBottomOf="@+id/til_report_location" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_select_report_location"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_first_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="20dp"
                    app:riv_border_width="1dp"
                    app:riv_border_color="@color/spanish_gray"
                    android:background="@drawable/shape_round_outline"
                    android:src="@drawable/ic_add_photo" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_second_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="20dp"
                    app:riv_border_width="1dp"
                    app:riv_border_color="@color/spanish_gray"
                    android:background="@drawable/shape_round_outline"
                    android:src="@drawable/ic_add_photo"
                    android:visibility="gone"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_third_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="20dp"
                    app:riv_border_width="1dp"
                    app:riv_border_color="@color/spanish_gray"
                    android:background="@drawable/shape_round_outline"
                    android:src="@drawable/ic_add_photo"
                    android:visibility="gone"/>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/text_send"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>